--- a/web-content/src/app/css/_general.scss
+++ b/web-content/src/app/css/_general.scss
@@ -26,3 +26,32 @@ body {
   padding: 40px 50px;
 }
 
+.app-container {
+
+  width: 95%;
+  box-sizing: content-box;
+  padding: 20px;
+}
+
+.slider-bro {
+  margin-top: 3rem;
+}
+
+.dead-mans-switch {
+
+}
+
+
+.view-container {
+  display: flex;
+}
+
+.content-container {
+  background: #e6e6e6;
+  color: #3e3e3e;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
